--- a/composer.json
+++ b/composer.json
@@ -8,8 +8,7 @@
     "require": {
         "php": "^8.2",
         "cviebrock/eloquent-sluggable": "^12.0",
-        "filament/filament": "^3.3",
-        "filament/forms": "3.3",
+        "filament/filament": "3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1",
