--- a/package.json
+++ b/package.json
@@ -14,7 +14,6 @@
         "concurrently": "^9.0.1",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.5.3",
-        "postcss-nesting": "^13.0.1",
         "tailwindcss": "^4.0.7",
         "vite": "^6.0"
     },
@@ -22,5 +21,10 @@
         "@rollup/rollup-linux-x64-gnu": "4.9.5",
         "@tailwindcss/oxide-linux-x64-gnu": "^4.0.1",
         "lightningcss-linux-x64-gnu": "^1.29.1"
+    },
+    "devDependencies": {
+        "@tailwindcss/postcss": "^4.1.4",
+        "postcss-nested": "^7.0.2",
+        "postcss-nesting": "^13.0.1"
     }
 }
