--- a/composer.json
+++ b/composer.json
@@ -7,15 +7,13 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
-<<<<<<< HEAD
         "filament/filament": "3.3",
         "laravel/framework": "^12.0",
         "laravel/tinker": "^2.10.1",
         "livewire/flux": "^2.1",
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.6.7",
-        "spatie/laravel-sluggable": "^3.7"
-=======
+        "spatie/laravel-sluggable": "^3.7",
         "althinect/filament-spatie-roles-permissions": "^2.3",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
@@ -23,7 +21,6 @@
         "livewire/flux": "^2.0",
         "livewire/volt": "^1.6.7",
         "spatie/laravel-permission": "^6.17"
->>>>>>> main
     },
     "require-dev": {
         "doctrine/dbal": "^4.2",
