--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,8 @@
         "livewire/livewire": "^3.6",
         "livewire/volt": "^1.6.7",
         "spatie/laravel-permission": "^6.17",
-        "spatie/laravel-sluggable": "^3.7"
+        "spatie/laravel-sluggable": "^3.7",
+        "stripe/stripe-php": "^17.2"
     },
     "require-dev": {
         "doctrine/dbal": "^4.2",
