--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "althinect/filament-spatie-roles-permissions": "^2.3",
         "filament/filament": "^3.3",
         "laravel/framework": "^12.0",
+        "laravel/socialite": "^5.21",
         "laravel/tinker": "^2.10.1",
         "leandrocfe/filament-apex-charts": "*",
         "livewire/flux": "^2.0",
